# server/controllers/drivers.ts
@@ -6,7 +6,6 @@ export const getDrivers = async(req: Request, res: Response) => {
     const queryString = 'select * from driver'
     console.log(queryString)
     const drivers = await pool.query(queryString)
-    console.log(JSON.stringify(drivers.rows))
     return res.json({
       code: 200,
       data: {
@@ -17,7 +16,56 @@ export const getDrivers = async(req: Request, res: Response) => {
     console.error(e)
     return res.status(400).json({
       code: 400,
-      messaege: 'Database Error'
+      data: {
+        messaege: 'Database Error'
+      }
+    })
+  }
+}
+
+export const addDriver = async(req: any, res: Response) => {
+  try {
+    const { name, address, licenseStatus } = req.body
+
+    const queryString = `insert into driver(name, address, licenseStatus) values(${name}, ${address}, ${licenseStatus});`
+    console.log(queryString)
+    const data = await pool.query(queryString)
+    return res.json({
+      code: 200,
+      data: {
+        schedule: data.rows
+      }
+    })
+  } catch (e: any) {
+    console.error(e)
+    return res.status(400).json({
+      code: 400,
+      data: {
+        messaege: 'Database Error'
+      }
+    })
+  }
+}
+
+export const updateDriver = async(req: any, res: Response) => {
+  try {
+    const { id, name, address, licenseStatus } = req.body
+    const queryString = `update driver set name=${name}, address=${address}, licenseStatus=${licenseStatus} where id=${id};`
+    console.log(queryString)
+    const data = await pool.query(queryString)
+    return res.json({
+      code: 200,
+      data: {
+        schedule: data.rows
+      }
+    })
+  } catch (e: any) {
+    console.error(e)
+    return res.status(400).json({
+      code: 400,
+      data: {
+        messaege: 'Database Error'
+      }
     })
   }
 }
