# src/api/bus.ts
@@ -13,3 +13,49 @@ export const getBusSchedule = (params?: any) =>
     method: 'get',
     params
   })
+
+export const addNewBus = (data: {
+    name: string
+    status: boolean
+  }) =>
+  request({
+    url: '/buses',
+    method: 'post',
+    data
+  })
+
+export const addBusSchedule = (data: {
+  bus: number
+  driver: number
+  route: number
+  datetime: string
+}) =>
+  request({
+    url: '/schedule',
+    method: 'post',
+    data
+  })
+
+export const updateBusSchedule = (data: {
+    id: number
+    bus: number
+    driver: number
+    route: number
+    datetime: string
+  }) =>
+  request({
+    url: '/schedule',
+    method: 'put',
+    data
+  })
+
+export const updateBus = (data: {
+    id: number
+    name: string
+    status: boolean
+  }) =>
+  request({
+    url: '/buses',
+    method: 'put',
+    data
+  })
